Cambios al formulario que subi anteriormente

--- a/CvForm.html
+++ b/CvForm.html
@@ -27,6 +27,14 @@
         <input type="radio" name="sexo" id="masc" value="Masculino">
         <label for="masc">Masculino</label> <br>
 
+        <label for="select">País</label><br>
+        <select name="select" id="select">
+            <option value="1">Seleccione</option>
+            <option value="2">Argentina</option>
+            <option value="3">Chile</option>
+            <option value="4">Brasil</option>
+        </select><br>
+
         <label for="foto">Incluir mi foto</label>
         <input type="file" name="fotdeper" id="foto"> <br>
 
